FIX: sefirewall link, bwf member wording, tkd wording

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="http://sefirewall.com">
+            <a class="portfolio-box" href="http://www.sefirewall.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/SEFartsmallthumb.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -1081,13 +1081,13 @@
                 <h3 class="section-heading text-white">Ancillary Athletics</h3>
 
                 <p>For Strength Training, I adhere to <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Reddit Bodyweight Fitness's RR</a> (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improving our knowledge base to advise and share best exercise/nutrition/skillwork practices with the <a href="https://discord.gg/cNX6Hjf">RedditBWF Community</a>.</p>
-                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Live Member Count: <u><span id="subscribers"></span></u> 💪 </a>
+                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Live Count: <u><span id="subscribers"></span></u> Members 💪 </a>
               </div>
             
               <div class="col-lg-4 text-center">
                 <h3 class="section-heading text-white">Martial Arts</h3>
 
-                <p>My background includes <a href="https://en.wikipedia.org/wiki/Vovinam">American Vovinam</a>, "hard-style" <a href="https://en.wikipedia.org/wiki/Aikido">Tenshinkai International Aikido</a>, and <a href="https://en.wikipedia.org/wiki/Taekwondo">Olympic Tae Kwon Do</a>. My current dojo trains Wado Ki Kai <a href="https://en.wikipedia.org/wiki/Karate">Karate</a>, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of <a href="https://en.wikipedia.org/wiki/Judo">Judo</a> and <a href="https://en.wikipedia.org/wiki/Jujutsu">JuJitsu</a> from Japan.</p>
+                <p>My background includes <a href="https://en.wikipedia.org/wiki/Vovinam">American Vovinam</a>, "hard-style" <a href="https://en.wikipedia.org/wiki/Aikido">Tenshinkai International Aikido</a>, and <a href="https://en.wikipedia.org/wiki/Taekwondo">Olympic TaeKwonDo</a>. My current dojo trains Wado Ki Kai <a href="https://en.wikipedia.org/wiki/Karate">Karate</a>, a comprehensive descendent of Naha-te, Goju, Shuri-te, and Shoto lineages from Okinawa, along with fluid foot styles of Tae Kwon Do from Korea, and grappling techniques of <a href="https://en.wikipedia.org/wiki/Judo">Judo</a> and <a href="https://en.wikipedia.org/wiki/Jujutsu">JuJitsu</a> from Japan.</p>
                 <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="./img/wkklineage.png">WKK Lineage 🌲</a>
               </div>
               
