FIX: bwf api btn

--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
                 <h3 class="section-heading text-white">Ancillary Athletics</h3>
 
                 <p>For Strength Training, I adhere to <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Reddit Bodyweight Fitness's RR</a> (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improving our knowledge base to advise and share best exercise/nutrition/skillwork practices with the <a href="https://discord.gg/cNX6Hjf">RedditBWF Community</a>.</p>
-                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Live Count: <u><span id="subscribers"></span></u> Members 💪 </a>
+                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Live: <u><span id="subscribers"></span></u> Members 💪 </a>
               </div>
             
               <div class="col-lg-4 text-center">
