--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Christopher Ngo | ingochris.tech">
     <meta property="og:url" content="https://www.ingochris.tech">
 
-    <title>Christopher Ngo</title>
+    <title>Christopher Ngo</title> 
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"> </head>
 
     <!-- Bootstrap core CSS -->
@@ -74,9 +74,7 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h1 class="text-uppercase">
-              <strong>Hi, I'm Christopher! 👋</strong>
-            </h1>
+            <h1 class="text-uppercase element bold"></h1>
             <div class="row">
               <div class="col-sm-6" style="text-align: left">
                 <h2 id="homeHeading">About me</h2>
@@ -1182,9 +1180,19 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="vendor/typed.js/typed.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/main.js"></script>
+    <script>
+      $(function(){
+        $(".element").typed({
+          strings: ["Hi, I'm Christopher! 👋"],
+          typeSpeed: 0,
+          backDelay: 0,
+        });
+      });
+    </script>
 
   </body>
 
