FIX: About Me HH

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p>I am a CCNA SECOPS certified engineer who entered the tech scene through the hair-raising vector of penetration testing.</p> 
                 
                 <p>I've grown super involved in the <a href="https://facebook.com/groups/hackathonhackers
-">hackathon hackers</a> community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and train in various disciplines of kinesiology.</p>
+">Hackathon Hackers</a> community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and train in various disciplines of kinesiology.</p>
 
                 <p>I currently teach hacker workshops for <a href="https://makeschool.com">Make School</a>.</p>
 
