ADD: copyright year script

--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
               <div class="col-lg-4 text-center">
                 <h3 class="section-heading text-white"><a href="https://www.youtube.com/watch?v=2fraSdN-PG8">Sports Go Sports</a></h3>
 
-                <p>I also Boulder, Climb, Dance [Ballet, Funk, Haitian, Hip-Hop, Jazz, Latin Ballroom (Bachata, Cha-cha, L.A. Style "On-1" Salsa, Cuban Salsa "Rueda de Casino"), Tap], Play Football and Fútbol and Tennis, Skate (Boosted/Electric, Caster, Freeline, Heely, Inline, Longboard, Skateboard), Surf, and much more!</p>
+                <p>I also Boulder, Climb, Dance [Ballet, Funk, Haitian, Hip-Hop, Jazz, Latin Ballroom (Bachata, Cha-cha, L.A. Style "On-1" Salsa, Cuban Salsa "Rueda de Casino"), Tap], Play Football and Fútbol and Tennis and Table Tennis, Skate (Boosted/Electric Board, Caster, Freeline, Heely, Inline, Longboard, Skateboard), Surf, and much more!</p>
 
                 <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.instagram.com/ingochris">Adventure book 📸</a>
               </div>
@@ -1170,7 +1170,7 @@
         </div>
       </div>
     </section>
-      <div class="text-center"><p>© Christopher Ngo 2018</p></div>
+      <div class="text-center"><p>© Christopher Ngo 2006<script>new Date().getFullYear()>document.write("-"+new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
