FIX: Copyright format

--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
         </div>
       </div>
     </section>
-      <div class="text-center"><p>© Christopher Ngo 2006<script>new Date().getFullYear()>document.write("-"+new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p></div>
+      <div class="text-center"><p>© Christopher Ngo, 2006<script>new Date().getFullYear()>document.write("-"+new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
