ADD: Distros, Hats; FIX: About Me, Hats; MV: Positions Titles, Select Relevant

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Christopher Ngo @ingochris">
-    <meta name="description" content="Christopher Ngo (ingochris.tech) is a Cybersecurity Software Engineer/CTF & Hackathon Hacker/Pentester Consultant based in Silicon Valley (San Francisco Bay Area, California, USA). ">
+    <meta name="description" content="Christopher Ngo (ingochris.tech) is a Cybersecurity Software Engineer/CTF & Hackathon Hacker/Pentester Consultant based in Silicon Valley (San Francisco Bay Area, California, USA).">
     <meta name="keywords" content="Christopher Ngo @ingochris">
     <meta name="twitter:creator" content="@ingochristech">
     <meta name="twitter:site" content="@ingochristech">
-    <meta property="og:description" content="Christopher Ngo ingochris.tech Personal Site">
+    <meta property="og:description" content="Christopher Ngo (ingochris.tech) is a Cybersecurity Software Engineer/CTF & Hackathon Hacker/Pentester Consultant based in Silicon Valley (San Francisco Bay Area, California, USA).">
     <meta property="og:title" content="Christopher Ngo | ingochris.tech">
     <meta property="og:url" content="https://www.ingochris.tech">
 
@@ -74,14 +74,14 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h1 class="text-uppercase element bold"></h1>
+            <h1 class="text-uppercase hello bold"></h1>
             <div class="row">
               <div class="col-sm-6" style="text-align: left">
                 <h2 id="homeHeading">About me</h2>
-                <p>I am a CCNA SECOPS certified engineer who entered the tech scene through the hair-raising vector of penetration testing. My hats include <span class="hats"></span>.</p> 
+                <p>I am a CCNA SECOPS certified engineer who entered the tech scene through the hair-raising vector of penetration testing. <span class="small-drop"></span>My hats include <span class="hats"></span>.</p> 
                 
                 <p>I've grown super involved in the <a href="https://facebook.com/groups/hackathonhackers
-">Hackathon Hackers</a> community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and train in various disciplines of kinesiology.</p>
+">Hackathon Hackers</a> community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and learn from fellow enthusiasts.</p>
 
                 <p>I currently teach hacker workshops for <a href="https://makeschool.com">Make School</a>.</p>
 
@@ -102,10 +102,10 @@
                   <li>Winner of <a href="https://www.womenwhocode.com/">WWCode Hackathon</a> 2017</li>
                   <li>Winner of <a href="http://www2.iitbombay.org/events/hackathon/index.html">Silicon Valley Hackathon</a> 2016</li>
                   <li>Winner of <a href="https://hackingedu.co">HackingEDU Hackathon</a> 2015</li>
-                  <li>Top 5% of <a href="http://www.rit.edu/ritonline/program/COMPSEC-MS">RITx Computer Forensics</a> (Class of 21,680 students)</li>
                   <li>Top 15 Pentesters in Nation at <a href="https://cambridge2cambridge.csail.mit.edu/">MIT Cambridge2Cambridge</a></li>
+                  <li>Top 5% of <a href="http://www.rit.edu/ritonline/program/COMPSEC-MS">RITx Computer Forensics</a> (Class of 21,680 students)</li>
                 </ul>
-              <h2 id="homeHeading">Positions</h2>                
+              <h2 id="homeHeading">Titles</h2>                
                 <ul>
                   <li>Board of Directors at <a href="https://siliconhacks.hackerearth.com">SiliconHacks</a></li>
                   <li>Mentorship Director at <a href="https://hackingedu.co">HackingEDU</a></li>
@@ -144,6 +144,7 @@
             <p>
               I practice offensive security in order to improve defense of computers, networks, software, data or information systems against viruses, worms, spyware, malware, intrusion detection, unauthorized access, denial-of-service attacks, and an ever increasing list of attacks by hackers acting as individuals or as part of organized crime or foreign governments.</p>
             <p>These are a few samples of my technical stacks:</p> 
+              <p><strong>DISTRIBUTIONS:</strong> CentOS, Debian, Kali, Parrot, RedHat, Solaris, Ubuntu</p>
               <p><strong>LINUX:</strong> AWK, BASH, CIFS/SMBFS, GIT, NFS, PXE, RAID, REGEX, ZSH
               </p><p><strong>NETWORK:</strong> Cisco IOS, Firebug, OSI Model, Routing, Switching, Subnetting, Wireshark
               <p><strong>PROGRAMMING LANGUAGES:</strong> BASH, C, C++, C#, Java, JavaScript, PERL, PHP, Python, Ruby, SQL, Swift
@@ -620,7 +621,7 @@
 
                   </div>
 
-        <h3 class="my-4">Select Coursework</h3>
+        <h3 class="my-4">Relevant Coursework</h3>
 <!--        <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>-->
       
           <div class="table-responsive col-lg-9 mx-auto">
@@ -1186,7 +1187,7 @@
     <script src="js/main.js"></script>
     <script>
       $(function(){
-        $(".element").typed({
+        $(".hello").typed({
           strings: ["Hi, I'm Christopher! 👋"],
           typeSpeed: 0,
           backDelay: 0,
@@ -1196,9 +1197,11 @@
     <script>
       $(function(){
         $(".hats").typed({
-          strings: ["Back-End Developer", "Conference Speaker", "Front-End Developer", "\"IT Guy\"", "Linux Engineer", "Pentester", "Security Engineer", "Systems Administrator", "Hackathon Hacker",  ],
+          strings: ["Back-End Dev", "Creator", "Hardware Hacker", "Network Engineer", "Conference Speaker", "Front-End Dev", "\"IT Guy\"", "Mentor", "Linux Engineer", "Pentester", "Security Engineer", "Systems Admin", "Hackathon Hacker", "Designer", "Organizer"],
           typeSpeed: 0,
-          backDelay: 666,
+          backDelay: 333,
+          backSpeed:50,
+          smartBackspace: true,
           cursorChar: "|",
           loop: true
         });
