MV: small-drop at typed.js

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="row">
               <div class="col-sm-6" style="text-align: left">
                 <h2 id="homeHeading">About me</h2>
-                <p>I am a CCNA SECOPS certified engineer who entered the tech scene through the hair-raising vector of penetration testing. <span class="small-drop"></span>My hats include <span class="hats"></span>.</p> 
+                <p>I am a CCNA SECOPS certified engineer who entered the tech scene through the hair-raising vector of penetration testing. My hats include <span class="small-drop"></span><span class="hats"></span>.</p> 
                 
                 <p>I've grown super involved in the <a href="https://facebook.com/groups/hackathonhackers
 ">Hackathon Hackers</a> community with my free time, and have founded/directed several organizations. In the past few years, I've traveled the world to mentor hackers, compete at CTFs & Hackathons, and learn from fellow enthusiasts.</p>
