ADD: More Kino Links

--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
               <div class="col-lg-4 text-center">
                 <h3 class="section-heading text-white">Ancillary Athletics</h3>
 
-                <p>For Strength Training, I adhere to <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Reddit Bodyweight Fitness's RR</a> (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improving our knowledge base to advise and share best exercise/nutrition/skillwork practices with the <a href="https://discord.gg/cNX6Hjf">RedditBWF Community</a>.</p>
+                <p>For Strength Training, I adhere to <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Reddit Bodyweight Fitness's RR</a> (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improving our <a href="https://www.reddit.com/r/bodyweightfitness/wiki/index">knowledge base</a> to advise and share best exercise/nutrition/skillwork practices with the <a href="https://discord.gg/cNX6Hjf">RedditBWF Community</a>.</p>
                 <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness">Live: <u><span id="subscribers"></span></u> Members 💪 </a>
               </div>
             
@@ -1093,7 +1093,7 @@
               <div class="col-lg-4 text-center">
                 <h3 class="section-heading text-white"><a href="https://www.youtube.com/watch?v=2fraSdN-PG8">Sports Go Sports</a></h3>
 
-                <p>I also Boulder, Climb, Dance [Ballet, Funk, Haitian, Hip-Hop, Jazz, Latin Ballroom (Bachata, Cha-cha, L.A. Style "On-1" Salsa, Cuban Salsa "Rueda de Casino"), Tap], Play Football and Fútbol and Tennis and Table Tennis, Skate (Boosted/Electric Board, Caster, Freeline, Heely, Inline, Longboard, Skateboard), Surf, and much more!</p>
+                <p>I also Boulder, <a href="https://www.reddit.com/r/climbing/">Climb</a>, Dance [Ballet, Funk, Haitian, Hip-Hop, Jazz, Latin Ballroom (<a href="https://www.facebook.com/StanfordBachataSocials/">Bachata</a>, Cha-cha, <a href="http://stanford.edu/group/salseros/cgi-bin/">L.A. Style "On-1"</a> Salsa, Cuban Salsa <a href="https://en.wikipedia.org/wiki/Rueda_de_Casino">"Rueda de Casino"</a>), Tap], Play Football and Fútbol and Tennis and Table Tennis, Skate (Boosted/<a href="https://www.reddit.com/r/ElectricSkateboarding/">Electric Skateboard</a>, Caster, Freeline, Heely, Inline, Longboard, Skateboard), Surf, and much more!</p>
 
                 <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.instagram.com/ingochris">Adventure book 📸</a>
               </div>
