ADD: thumbnail img sizes

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="row no-gutters">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://github.com/ingochris/ainomaly">
-              <img class="img-fluid" src="img/portfolio/thumbnails/ainomaly.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/ainomaly.jpg" width="650" height="350" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -211,7 +211,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="http://www.sefirewall.com">
-              <img class="img-fluid" src="img/portfolio/thumbnails/SEFartsmallthumb.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/SEFartsmallthumb.jpg" width="650" height="350" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -226,7 +226,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://github.com/ingochris/justicematch">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" width="650" height="350" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -241,7 +241,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://hackingedu.co">
-              <img class="img-fluid" src="img/portfolio/thumbnails/hackingedu.png" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/hackingedu.jpg" width="650" height="350" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -256,7 +256,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://siliconhacks.hackerearth.com">
-              <img class="img-fluid" src="img/portfolio/thumbnails/siliconhacks.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/siliconhacks.jpg" width="650" height="350" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -271,7 +271,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="http://sospectra.com">
-              <img class="img-fluid" src="img/portfolio/thumbnails/spectra.png" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/spectra.jpg" width="650" height="350" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
