--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <meta property="og:url" content="https://www.ingochris.tech">
 
     <title>Christopher Ngo</title> 
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon"> </head>
+<!--<link rel="icon" href="img/favicon.ico" type="image/x-icon">-->
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
+
+  </head>
+
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
