MV: target=_blank rel=noopener; FIX: getFullYear()

--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
           <div class="col-lg-3 text-center">
             <i class="fa fa-linkedin fa-3x sr-contact"></i>
             <p>
-            <a href="https://linkedin.com/in/ingochris/" target="_blank">linkedin.com/in/ingochris</a>
+            <a href="https://linkedin.com/in/ingochris/" rel="noopener">linkedin.com/in/ingochris</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
@@ -1133,37 +1133,37 @@
             <div class="col-lg-3 text-center">
             <i class="fa fa-github fa-3x sr-contact"></i>
             <p>
-            <a href="https://github.com/ingochris" target="_blank">github.com/ingochris</a>
+            <a href="https://github.com/ingochris" rel="noopener">github.com/ingochris</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
             <i class="fa fa-twitter fa-3x sr-contact"></i>
             <p>
-            <a href="https://twitter.com/ingochristech" target="_blank">twitter.com/ingochristech</a>
+            <a href="https://twitter.com/ingochristech" rel="noopener"">twitter.com/ingochristech</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
             <i class="fa fa-instagram fa-3x sr-contact"></i>
             <p>
-            <a href="https://instagram.com/ingochris" target="_blank">instagram.com/ingochris</a>
+            <a href="https://instagram.com/ingochris" rel="noopener">instagram.com/ingochris</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
             <i class="fa fa-free-code-camp fa-3x sr-contact"></i>
             <p>
-            <a href="https://freecodecamp.com/ingochris" target="_blank">freecodecamp.com/ingochris</a>
+            <a href="https://freecodecamp.com/ingochris" rel="noopener">freecodecamp.com/ingochris</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
             <i class="fa fa-language fa-3x sr-contact"></i>
             <p>
-            <a href="https://duome.eu/ingochris" target="_blank">duolingo.com/ingochris</a>
+            <a href="https://duome.eu/ingochris" rel="noopener">duolingo.com/ingochris</a>
             </p>
             </div>
             <div class="col-lg-3 text-center">
             <i class="fa fa-reddit-alien fa-3x sr-contact"></i>
             <p>
-            <a href="https://reddit.com/user/ingochris" target="_blank">reddit.com/u/ingochris</a>
+            <a href="https://reddit.com/user/ingochris" rel="noopener">reddit.com/u/ingochris</a>
             </p>
             </div>
         </div>
@@ -1176,7 +1176,7 @@
         </div>
       </div>
     </section>
-      <div class="text-center"><p>© Christopher Ngo, 2006<script>new Date().getFullYear()>document.write("-"+new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p></div>
+      <div class="text-center"><p>© Christopher Ngo, 2006-<script>new Date().getFullYear()>document.write(new Date().getFullYear());</script>. All rights reserved. Unathorized use prohibited.</p></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
