RM: Todo Coursework

--- a/index.html
+++ b/index.html
@@ -718,12 +718,12 @@
                           <td>Stanford University</td>
                           <td>⏳</td>
                       </tr>
-                      <tr>
+                      <!--<tr>
                           <td>CS107</td>
                           <td>Programming Paradigms in C</td>
                           <td>Stanford University</td>
                           <td></td>
-                      </tr>
+                      </tr>-->
                       <tr>
                           <td>CS142</td>
                           <td>Web Applications</td>
@@ -748,19 +748,19 @@
                           <td>Stanford University</td>
                           <td>✔️</td>
                       </tr>
-                      <tr>
+                      <!--<tr>
                           <td>CS154</td>
                           <td>Automata and Complexity Theory</td>
                           <td>Stanford University</td>
                           <td></td>
-                      </tr>
+                      </tr>-->
                       <tr>
                           <td>CS161</td>
                           <td>Algorithms: Design and Analysis</td>
                           <td>Stanford University</td>
                           <td>⏳</td>
                       </tr>
-                      <tr>
+                      <!--<tr>
                           <td>CS223A</td>
                           <td>Robotics</td>
                           <td>Stanford University</td>
@@ -777,19 +777,19 @@
                           <td>Machine Learning</td>
                           <td>Stanford University</td>
                           <td></td>
-                      </tr>
+                      </tr>-->
                       <tr>
                           <td>CS231n</td>
                           <td>Convolutional Neural Networks</td>
                           <td>Stanford University</td>
                           <td>⏳</td>
                       </tr>
-                      <tr>
+                      <!--<tr>
                           <td>CS236</td>
                           <td>Mining Massive Datasets</td>
                           <td>Stanford University</td>
                           <td></td>
-                      </tr>
+                      </tr>-->
                       <tr>
                           <td>CS255</td>
                           <td>Cryptography</td>
@@ -826,7 +826,7 @@
                           <td>Rochester Institute of Technology</td>
                           <td>⏳</td>
                       </tr>
-                      <tr>
+                      <!--<tr>
                           <td>CY601</td>
                           <td>Research Methods and Proposal Development</td>
                           <td>Rochester Institute of Technology</td>
@@ -867,7 +867,7 @@
                           <td>Capstone for Computing Security</td>
                           <td>Rochester Institute of Technology</td>
                           <td></td>
-                      </tr>
+                      </tr>-->
                       <tr>
                           <td>CY1000</td>
                           <td>CompTIA A+</td>
@@ -946,12 +946,12 @@
                           <td>CybraryIT</td>
                           <td>⏳</td>
                       </tr>
-                      <tr>
+                      <!--<tr>
                           <td>CY3005</td>
                           <td>Malware Analysis and Reverse Engineering</td>
                           <td>CybraryIT</td>
                           <td></td>
-                      </tr>
+                      </tr>-->
                       <tr>
                           <td>CY3006</td>
                           <td>Metasploit</td>
@@ -982,12 +982,12 @@
                           <td>MongoDB University</td>
                           <td>✔️</td>
                       </tr>
-                      <tr>
+                      <!--<tr>
                           <td>PWK</td>
                           <td>Penetration Testing Training with Kali Linux (OSCP)</td>
                           <td>Offensive-Security</td>
                           <td></td>
-                      </tr>
+                      </tr>-->
                       <tr>
                           <td>SECFND</td>
                           <td>CCNA Cybersecurity Fundamentals</td>
@@ -1084,8 +1084,8 @@
               <div class="col-lg-4 text-center">
                 <h3 class="section-heading text-white">Ancillary Athletics</h3>
 
-                <p>For Strength Training, I adhere to <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine" target="_blank" rel="noopener">Reddit Bodyweight Fitness's RR</a> (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improving our <a href="https://www.reddit.com/r/bodyweightfitness/wiki/index" target="_blank" rel="noopener">knowledge base</a> to advise and share best exercise/nutrition/skillwork practices with the <a href="https://discord.gg/cNX6Hjf" target="_blank" rel="noopener">RedditBWF Community</a>.</p>
-                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness" target="_blank" rel="noopener">Live: <u><span id="subscribers"></span></u> Members 💪 </a>
+                <p>For Strength Training, I adhere to <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine" target="_blank" rel="noopener">Reddit Bodyweight Fitness's RR</a> (Recommended Routine). As part of the modteam, I maintain the subreddit while constantly improving our <a href="https://www.reddit.com/r/bodyweightfitness/wiki/index" target="_blank" rel="noopener">knowledge base</a> to advise and share best exercise/nutrition/skillwork practices with the <a href="https://discord.gg/cNX6Hjf" target="_blank" rel="noopener">RedditBWF Community</a>. I also train with <a href="https://www.youtube.com/user/OfficialBarstarzz" target="_blank" rel="noopener">Barstarzz</a>.</p>
+                <a class="btn btn-dark btn-xl js-scroll-trigger mb-4" href="https://www.reddit.com/r/bodyweightfitness" target="_blank" rel="noopener">Live: <u><span id="subscribers"></span></u> BWFers 💪 </a>
               </div>
             
               <div class="col-lg-4 text-center">
