--- a/index.html
+++ b/index.html
@@ -625,8 +625,11 @@
                     </div>
 
                   </div>
+      </div>
 
+      <div class="container col-lg-12 text-center">
         <h3 class="my-4">Relevant Coursework</h3>
+      </div>
 <!--        <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>-->
       
           <div class="table-responsive col-lg-9 mx-auto">
