--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
         <h3 class="my-4">Relevant Coursework</h3>
       </div>
 <!--        <a class="btn btn-light btn-xl sr-button" href="https://devpost.com/ingochris">Devpost Portfolio</a>-->
-      
+        <div class="no-margin">
           <div class="table-responsive col-lg-9 mx-auto">
              <table class="table table-striped table-bordered table-hover table-light" align="center">
                   <thead class="thead-light">
@@ -1066,7 +1066,7 @@
                   </tbody>
               </table>
           </div>
-
+        </div>
       </div>
     </section>
 
