--- a/index.html
+++ b/index.html
@@ -1193,6 +1193,8 @@
               
             <div class="col-lg-6 text-center">
 
+              <iframe width=100% height="350" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJTXpXwkK-j4AR9EJzWafCFvs&key=AIzaSyASt7PEEOUf2msM189jzd1EAeBTS5a8dhY" allowfullscreen></iframe>
+
               <div id="map"></div>
               <script>
           // Initialize and add the map
