--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
     <script>
       $(function(){
         $(".hats").typed({
-          strings: ["Back-End Dev", "Creator", "Hardware Hacker", "Network Engineer", "Conference Speaker", "Front-End Dev", "\"IT Guy\"", "Mentor", "Linux Engineer", "Pentester", "Security Engineer", "Systems Admin", "Hackathoner", "Designer", "Organizer"],
+          strings: ["Back-End Dev", "Creator", "Hardware Hacker", "Network Engineer", "Conference Speaker", "Front-End Dev", "\"IT Guy\"", "Mentor", "Linux Engineer", "Pentester", "Security Engineer", "Systems Admin", "Hackathoner", "Entrepreneur", "Designer", "Organizer"],
           typeSpeed: 0,
           backDelay: 333,
           backSpeed:50,
