FIX: crypto form target security

--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
                   <h3>Contact</h3>
                   <div class="text-left">
                     <p>Please use the form below to encrypt your message for secure communication (<a href="https://openpgpjs.org" target="_blank" rel="noopener">OpenPGP.js)</a>.</p>
-                    <form action="mailto:ingochristech@gmail.com" method="GET">
+                    <form action="mailto:ingochristech@gmail.com" target="_blank" method="GET">
                       <input class="form-control" id="name" type="text" placeholder="Subject" name="Subject">   
 
                       <textarea class="form-control" id="form" type="text" placeholder="Plaintext Message" required="required" data-validation-required-message="Please enter your name." aria-invalid="false" name="body" id="input" style='width: 100%; min-height: 42px'></textarea>
